--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,5 @@
-* {
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-body {
-  padding: 2rem;
-  background-color: var(--white);
-  display: grid;
-  place-items: center;
-}
-
 .app {
   max-width: 2000px;
-  display: grid;
-  grid-template-columns: 5fr 1fr;
+  display: flex;
   gap: 1rem;
 }
