--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -1,9 +1,23 @@
 .project-card {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  width: 100%;
 }
 
 .project-card > a {
   text-decoration: none;
   color: var(--black);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.project-card > img {
+  width: 20rem;
+  height: 15rem;
+  border: 1px solid gray;
+}
+
+.project-card h3 {
+  font-weight: 500;
 }
