--- a/src/pages/Projects/index.css
+++ b/src/pages/Projects/index.css
@@ -1,13 +1,22 @@
-.projects-container {
+.main-page {
   display: flex;
   flex-direction: column;
   padding: 1rem;
   padding: 2rem;
   background-color: var(--light-gray);
   min-height: 200vh;
+  width: 70vw;
   border-left: 3px solid var(--black);
+  gap: 5rem;
 }
 
-.projects-container h2 {
+.projects-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.main-page h2 {
   margin: 0;
+  font-weight: 500;
 }
