--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -4,7 +4,6 @@
   width: fit-content;
   height: fit-content;
   border-bottom: 3px solid var(--light-gray);
-  writing-mode: sideways-rl;
 }
 .nav-container ul {
   display: flex;
@@ -13,23 +12,20 @@
 }
 
 .nav-container li {
+  width: 10rem;
+  text-align: center;
   list-style: none;
   padding: 1rem 0.5rem;
   border: 1px solid rgb(196, 196, 196);
   border: 1px solid rgb(196, 196, 196);
   cursor: pointer;
   transition: 200ms all ease-in;
+  background-color: var(--light-gray);
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
 }
 
 .nav-container li.active {
   background-color: black;
   color: white;
-}
-
-.nav-container li:first-child {
-  border-top-right-radius: 25px;
-}
-
-.nav-container li:last-child {
-  border-bottom-right-radius: 25px;
 }
