--- a/src/pages/MainPage/index.css
+++ b/src/pages/MainPage/index.css
@@ -1,19 +1,25 @@
 .main-page {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
   padding: 2rem;
   background-color: var(--light-gray);
   min-height: 200vh;
-  width: 70vw;
+  width: fit-content;
   border-left: 3px solid var(--black);
-  gap: 5rem;
+  gap: 4rem;
+  width: 80vw;
+  max-width: 1800px;
 }
 
 .projects-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 4rem;
+}
+
+.projects-wrapper.visuals {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .main-page h2 {
